Added bcrypt gem and added a sessions controller and views folder to allow for a login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <header>
+      <% if @logged_in_user %>
+        <%= @logged_in_user.name %>
+      <% end %>
+      <% if @errors %>
+        <ul>
+          <% @errors.each do |error| %>
+            <li>
+              <%= error %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
