--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
   <li><%= f.label :name %>
   <%= f.text_field :name %></li>
   <li><%= f.label :Password %>
-  <%= f.password_field :password_digest %></li>
+  <%= f.password_field :password %></li>
   <li><%= f.label :bio %>
   <%= f.text_field :bio %></li>
   <%= f.submit %>
