Implemented the correct authentication and authorization, fixed my views files, fixed my routes, and finished basic MVP

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,11 @@
-<ul>
+
 <%= form_for @post do |f| %>
-<li><%= f.label :content %>
-<%= f.text_field :content %></li>
-<li><%= f.collection_select :user_id, @users, :id, :name %></li>
+<%= f.label :content %>
+<%= f.text_field :content %>
+<br>
+<%= f.collection_select :user_id, @users, :id, :name %>
+<br>
+<%= f.collection_select :sport_id, @sports, :id, :name %>
+<br>
 <%= f.submit %>
 <% end %>
-</ul>
