--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
-  
+
 <% @sports.each do |sport| %>
-<li><%= link_to sport.name, sport %></li>
+<li> <h2> <%= link_to sport.name, sport %> </h2> </li>
 <% end %>
 
 </ul>
