--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,12 @@
-<ul>
 <%= form_for @user do |f| %>
-  <li><%= f.label :name %>
-  <%= f.text_field :name %></li>
-  <li><%= f.label :Password %>
-  <%= f.password_field :password %></li>
-  <li><%= f.label :bio %>
-  <%= f.text_field :bio %></li>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <br>
+  <%= f.label :Password %>
+  <%= f.password_field :password %>
+  <br>
+  <%= f.label :bio %>
+  <%= f.text_field :bio %>
+  <br>
   <%= f.submit %>
 <% end %>
-</ul>
