--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
 
 <% @users.each do |user| %>
-<li> <%= link_to user.name, user %> </li>
+<li> <h2> <%= link_to user.name, user %> </h2> </li>
 <% end %>
 
 </ul>
